src/test/ui/derives/issue-88206.stderr
error: cannot find derive macro `Serialize` in this scope
  --> $DIR/issue-88206.rs:14:10
   |
LL | #[derive(Serialize)]
   |          ^^^^^^^^^
   |
note: `Serialize` is imported here, but it is not a derive macro
  --> $DIR/issue-88206.rs:10:5
   |
LL | use hey::Serialize;
   |     ^^^^^^^^^^^^^^

warning: unused import: `hey::Serialize`
  --> $DIR/issue-88206.rs:10:5
   |
LL | use hey::Serialize;
   |     ^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/issue-88206.rs:3:9
   |
LL | #![warn(unused_imports)]
   |         ^^^^^^^^^^^^^^

error: aborting due to previous error; 1 warning emitted

